fix add slang function