@@ -7,7 +7,7 @@ import java.util.*;
 public class DataManager {
     public static final String SLANG_TXT = "data/slang.txt";
     public static final String SLANG_DAT = "data/slang_map.dat";
-    public static final String DEFINATION_DAT = "data/defination_map.dat";
+    public static final String DEFINITION_DAT = "data/definition_map.dat";
     public static final String HISTORY_TXT = "data/history.txt";
 
     @SuppressWarnings("unchecked")
@@ -25,13 +25,13 @@ public class DataManager {
     }
     @SuppressWarnings("unchecked")
     public static HashMap<String, List<String>> loadDef() throws Exception {
-        File dat = new File(DEFINATION_DAT);
+        File dat = new File(DEFINITION_DAT);
         if (dat.exists()) {
             try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(dat))) {
                 return (HashMap<String, List<String>>) ois.readObject();
             } 
             catch (Exception e) {
-                System.out.println("Failed to read defination_map.dat, will rebuild from slang.txt");
+                System.out.println("Failed to read definItion_map.dat, will rebuild from slang.txt");
             }
         }
         return loadDefFromText();
@@ -47,12 +47,15 @@ public class DataManager {
     }
     public static List<String> loadHistory() throws Exception {
         List<String> history = new ArrayList<>();
-        BufferedReader fr = new BufferedReader(new FileReader(HISTORY_TXT));
-        String line;
-        while ((line = fr.readLine()) != null) {
-            history.add(line.trim());
+        File historyFile = new File(HISTORY_TXT);
+        if (historyFile.exists()) {
+            BufferedReader br = new BufferedReader(new FileReader(historyFile));
+            String line;
+            while ((line = br.readLine()) != null) {
+                history.add(line.trim());
+            }
+            br.close();
         }
-        fr.close();
         return history;
     }
     private static HashMap<String, List<String>> loadSlangFromText() throws Exception {
@@ -68,7 +71,8 @@ public class DataManager {
             for (int i = 0; i < definitions.length; i++) {
                 definitions[i] = definitions[i].trim();
             }
-            slangMap.put(slang, List.of(definitions));
+            List<String> defList = Arrays.asList(definitions);
+            slangMap.put(slang, defList);
         }
         fr.close();
         saveSlangDat(slangMap);
@@ -94,7 +98,7 @@ public class DataManager {
         saveDefDat(defMap);
         return defMap;
     }
-    private static void saveSlangDat(HashMap<String, List<String>> slangMap) throws Exception {
+    public static void saveSlangDat(HashMap<String, List<String>> slangMap) throws Exception {
         try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(SLANG_DAT))) {
             oos.writeObject(slangMap); 
             System.out.println("Slang hashmap was saved!");
@@ -103,10 +107,10 @@ public class DataManager {
             e.printStackTrace();
         }
     }
-    private static void saveDefDat(HashMap<String, List<String>> defMap) throws Exception {
-        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(DEFINATION_DAT))) {
+    public static void saveDefDat(HashMap<String, List<String>> defMap) throws Exception {
+        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(DEFINITION_DAT))) {
             oos.writeObject(defMap); 
-            System.out.println("Defination hashmap was saved!");
+            System.out.println("Definition hashmap was saved!");
         } 
         catch (IOException e) {
             e.printStackTrace();
